	methods.
	* Added a notes bubble system to display the contents of the
	'RECEIVER.REMARKS' field in the 'List Receivers' dialog.
2022-01-20 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'FEEDS.REMARKS' field to the management database.
	* Incremented the management database version to 20.
	* Added 'Feed::remarks()' and 'Feed::setRemarks()'
	methods.
	* Added a notes bubble system to display the contents of the
	'FEEDS.REMARKS' field in the 'List Feeds' dialog.
2022-02-07 Fred Gleason <fredg@paravelsystems.com>
	* Tweaked layout of the 'Edit Event' dialog in gnmc(1).
2022-02-07 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a typo in the title of the 'List Feeds' dialog in gnmc(1).
2022-02-07 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.7.5.
2022-02-09 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'Receiver::eventsSelectSql()' static method.
	* Added code to gnmd(8) to clear event status on non-reachable
	receivers.
	* Added code to gnmd(8) to clear status on all events at startup.
2022-02-09 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'TIMEZONE' command to the receive command protocol.
	* Modified gncd(8) to update the local timezone to match the
	management system.
2022-02-09 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.7.6.
2022-02-10 Fred Gleason <fredg@paravelsystems.com>
	* Added a '--startup-delay- switch to gncd(8).
2022-02-10 Fred Gleason <fredg@paravelsystems.com>
	*Instrumented the 'TimeEngine' class in gncd(8).
2022-02-10 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.7.7.
2022-02-10 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'Site:' dropdown to the 'List Events' dialog in gnmc(1).
2025-04-09 Fred Gleason <fredg@paravelsystems.com>
	* Cleaned up compiler warnings in gncd(8).
	* Cleaned up compiler warnings in gnmc(8).
2025-04-09 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the Qt5 dependency to Qt6.